refine misc functionality & add more docstrings